# vcmi

./: .gitignore  CCallback.cpp  CCallback.h  CMakeLists.txt  VCMI_VS11.sln  VCMI_VS15.sln  VCMI_global.props  VCMI_global_release.props  VCMI_global_user.props  buglist.txt  ffmpeg-20160418-git-13406b6-win32-dev.rar  t.json  zlib128-dll.rar
AI/BattleAI/: AttackPossibility.cpp  BattleAI.cpp  BattleAI.h  BattleAI.vcxproj  BattleAI.vcxproj.filters  main.cpp
AI/EmptyAI/: EmptyAI.vcxproj
AI/GeniusAI/: CMakeLists.txt  GeniusAI.cpp  GeniusAI.h  GeniusAI.vcxproj  ReadMe.txt  main.cpp
client/: AdventureMapClasses.cpp  CAdvmapInterface.cpp  CMT.cpp  CPlayerInterface.cpp  CPlayerInterface.h  Client.cpp  Client.h  NetPacksClient.cpp  VCMI_client.vcxproj  VCMI_client.vcxproj.filters  mapHandler.cpp  mapHandler.h
config/: modSettings.json  settings.json
editor/: Editor.vcxproj
launcher/: VCMI_launcher.vcxproj
lib/: BattleState.cpp  BattleState.h  CBattleCallback.cpp  CBattleCallback.h  CBonusTypeHandler.cpp  CCreatureSet.cpp  CCreatureSet.h  CGameInfoCallback.cpp  CGameInfoCallback.h  CGameInterface.cpp  CGameInterface.h  CGameState.cpp  CGameState.h  CPathfinder.cpp  CPathfinder.h  GameConstants.cpp  GameConstants.h  HeroBonus.cpp  HeroBonus.h  IGameCallback.cpp  IGameCallback.h  IGameEventsReceiver.h  NetPacks.h  NetPacksLib.cpp  StartInfo.h  VCMIDirs.cpp  VCMIDirs.h  VCMI_lib.vcxproj  jsonTest.cpp
server/: CGameHandler.cpp  CGameHandler.h  CQuery.cpp  CQuery.h  CVCMIServer.cpp  NetPacksServer.cpp  VCMI_server.vcxproj  VCMI_server.vcxproj.filters
test/: Test.vcxproj
(+80 files in other folders)
